tests/NormalTests/paczka1/fuzzy1/22876861.err
Error in line 1: S544 S544 21,0
Error in line 7: Qg6bI A387 98,3
Error in line 11: vDK A387 35,9
Error in line 10: Qg6bI S853 87,4
Error in line 26: S544 S853 35,7
Error in line 27: S544 A387 50,7
